<resources>
    <string name="app_name">Quotes</string>
    <string name="share">Share</string>
    <string name="icon_share">&#xf064;</string>
    <string name="next">Next</string>
    <string name="anon">Anonymous</string>
    <string name="connectionError">Unable to connect to internet</string>
    <string name="noInternet">Error occured while connecting to the internet</string>
    <string name="retry">Retry</string>
    <string name="share_via">Share via...</string>
    <string name="viewfavs">View Favourites</string>
    <string name="quoteDeleted">Quote removed</string>
    <string name="undo">Undo</string>
    <string name="saved">Saved to favourites</string>
    <string name="removed">Removed from favourites</string>
</resources>
