<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/radial_background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="dev.suncha.quotes.MainActivity">


    <RelativeLayout
        android:id="@+id/buttonHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/layout_margin">

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/shareButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:padding="@dimen/padding_left_right"
            app:fb_borderColor="@color/white"
            app:fb_borderWidth="1dp"
            app:fb_defaultColor="#3b5998"
            app:fb_focusColor="#5577bd"
            app:fb_fontIconResource="@string/icon_share"
            app:fb_fontIconSize="@dimen/author_font_size"
            app:fb_iconPaddingLeft="@dimen/padding_left_right"
            app:fb_iconPosition="right"
            app:fb_radius="20dp"
            app:fb_text="@string/share"
            app:fb_textColor="#FFFFFF" />

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/nextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="@dimen/padding_left_right"
            app:fb_borderColor="@color/white"
            app:fb_borderWidth="1dp"
            app:fb_defaultColor="#16a085"
            app:fb_focusColor="#2ecc71"
            app:fb_fontIconResource="&#xf101;"
            app:fb_iconPaddingLeft="@dimen/padding_left_right"
            app:fb_iconPosition="right"
            app:fb_radius="20dp"
            app:fb_text="@string/next"
            app:fb_textColor="#FFFFFF" />

        <com.varunest.sparkbutton.SparkButton
            android:id="@+id/likeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            app:sparkbutton_activeImage="@drawable/ic_action_action_favorite"
            app:sparkbutton_inActiveImage="@drawable/ic_action_action_favorite_outline"
            app:sparkbutton_primaryColor="@color/alizarian"
            app:sparkbutton_secondaryColor="@color/pomegranate" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/quoteandauthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true">


        <TextView
            android:id="@+id/quoteTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:textAlignment="center"
            android:textSize="@dimen/quote_font_size" />

        <TextView
            android:id="@+id/authorTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/quoteTV"
            android:gravity="center_vertical|left"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:textSize="@dimen/author_font_size"
            android:textAlignment="center"/>
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/noInternetLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">

        <TextView
            android:id="@+id/nointernettext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/noInternet"
            android:textAlignment="center"
            android:textSize="@dimen/quote_font_size" />

        <Button
            android:id="@+id/retryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nointernettext"
            android:layout_centerHorizontal="true"
            android:text="@string/retry" />

    </RelativeLayout>


</RelativeLayout>
